# pycopy

./: CMakeLists.txt
extmod/: vfs.c  vfs.h
tools/: cmake-qstr.py
zephyr/: Kconfig
zephyr/include/: modzephyr.h  mpconfigport.h  python.h  qstrdefsport.h  util.h  zfs.h
zephyr/src/: modtest.c  modusocket.c  modzephyr.c  python.c  util.c  zfs.c  zfs_file.c
